<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Integrated robot bringup package for RM75 arm, DH gripper and RealSense camera</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_description</depend>
  <depend>rm_driver</depend>
  <depend>rm_control</depend>
  <depend>rm_75_config</depend>
  <depend>dh_gripper_driver</depend>
  <depend>realsense2_camera</depend>
  <depend>realsense2_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 